--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mercadopago": "^2.0.7"
+    "mercadopago": "^2.0.7",
+    "resend": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
