--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "googleapis": "^153.0.0",
     "mercadopago": "^2.0.7",
     "resend": "^4.7.0"
   },
